eks/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing
spec:
  selector:
    matchLabels:
      app: billing
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: billing
    spec:
      containers:
      - name: billing
        image: 178933473620.dkr.ecr.us-east-2.amazonaws.com/billing:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
