eks/service.yml
# email Service service file

apiVersion: v1
kind: Service
metadata:
  name: billing-service
spec:
  ports:
  - port: 3001
    targetPort: billing-port
    protocol: TCP
  selector:
    app: billing
  type: NodePort
  

---

kind: Service
apiVersion: v1
metadata:
  name: email-service
spec:
  ports:
  - port: 3002
    targetPort: email-port
    protocol: TCP
  selector:
    app: email
  type: ClusterIP

---

kind: Service
apiVersion: v1
metadata:
  name: payment-service
spec:
  ports:
  - port: 3003
    targetPort: payment-port
    protocol: TCP
  selector:
    app: payment
  type: NodePort


---

kind: Service
apiVersion: v1
metadata:
  name: user-service
spec:
  ports:
  - port: 3004
    targetPort: user-port
    protocol: TCP
  selector:
    app: user
  type: NodePort

 

---

kind: Service
apiVersion: v1
metadata:
  name: wallet-service
spec:
  ports:
  - port: 3005
    targetPort: wallet-port
    protocol: TCP
  selector:
    app: wallet
  type: NodePort


---

kind: Service
apiVersion: v1
metadata:
  name: rabbitmq
spec:
  ports:
  - port: 5672
    targetPort: rabbitmq-port
    protocol: TCP
  selector:
    app: rabbitmq
  type: NodePort
